package types

import (
	"crypto/rand"
	"fmt"
	"io"
	"testing"
	"time"

	"github.com/gogo/protobuf/proto"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/tendermint/tendermint/crypto"
	"github.com/tendermint/tendermint/crypto/merkle"
	cmtrand "github.com/tendermint/tendermint/libs/rand"
	cmtproto "github.com/tendermint/tendermint/proto/tendermint/types"
)

const (
	testPartSize = 65536 // 64KB ...  4096 // 4KB
)

func TestBasicPartSet(t *testing.T) {
	// Construct random data of size partSize * 100
	nParts := 100
	data := cmtrand.Bytes(testPartSize * nParts)
	partSet := NewPartSetFromData(data, testPartSize)

	assert.NotEmpty(t, partSet.Hash())
	assert.EqualValues(t, nParts, partSet.Total())
	assert.Equal(t, nParts, partSet.BitArray().Size())
	assert.True(t, partSet.HashesTo(partSet.Hash()))
	assert.True(t, partSet.IsComplete())
	assert.EqualValues(t, nParts, partSet.Count())
	assert.EqualValues(t, testPartSize*nParts, partSet.ByteSize())

	// Test adding parts to a new partSet.
	partSet2 := NewPartSetFromHeader(partSet.Header())

	assert.True(t, partSet2.HasHeader(partSet.Header()))
	for i := 0; i < int(partSet.Total()); i++ {
		part := partSet.GetPart(i)
		// t.Logf("\n%v", part)
		added, err := partSet2.AddPart(part)
		if !added || err != nil {
			t.Errorf("failed to add part %v, error: %v", i, err)
		}
	}
	// adding part with invalid index
	added, err := partSet2.AddPart(&Part{Index: 10000})
	assert.False(t, added)
	assert.Error(t, err)
	// adding existing part
	added, err = partSet2.AddPart(partSet2.GetPart(0))
	assert.False(t, added)
	assert.Nil(t, err)

	assert.Equal(t, partSet.Hash(), partSet2.Hash())
	assert.EqualValues(t, nParts, partSet2.Total())
	assert.EqualValues(t, nParts*testPartSize, partSet.ByteSize())
	assert.True(t, partSet2.IsComplete())

	// Reconstruct data, assert that they are equal.
	data2Reader := partSet2.GetReader()
	data2, err := io.ReadAll(data2Reader)
	require.NoError(t, err)

	assert.Equal(t, data, data2)
}

func TestWrongProof(t *testing.T) {
	// Construct random data of size partSize * 100
	data := cmtrand.Bytes(testPartSize * 100)
	partSet := NewPartSetFromData(data, testPartSize)

	// Test adding a part with wrong data.
	partSet2 := NewPartSetFromHeader(partSet.Header())

	// Test adding a part with wrong trail.
	part := partSet.GetPart(0)
	part.Proof.Aunts[0][0] += byte(0x01)
	added, err := partSet2.AddPart(part)
	if added || err == nil {
		t.Errorf("expected to fail adding a part with bad trail.")
	}

	// Test adding a part with wrong bytes.
	part = partSet.GetPart(1)
	part.Bytes[0] += byte(0x01)
	added, err = partSet2.AddPart(part)
	if added || err == nil {
		t.Errorf("expected to fail adding a part with bad bytes.")
	}

	// Test adding a part with wrong proof index.
	part = partSet.GetPart(2)
	part.Proof.Index = 1
	added, err = partSet2.AddPart(part)
	if added || err == nil {
		t.Errorf("expected to fail adding a part with bad proof index.")
	}

	// Test adding a part with wrong proof total.
	part = partSet.GetPart(3)
	part.Proof.Total = int64(partSet.Total() - 1)
	added, err = partSet2.AddPart(part)
	if added || err == nil {
		t.Errorf("expected to fail adding a part with bad proof total.")
	}
}

func TestPartSetHeaderValidateBasic(t *testing.T) {
	testCases := []struct {
		testName              string
		malleatePartSetHeader func(*PartSetHeader)
		expectErr             bool
	}{
		{"Good PartSet", func(psHeader *PartSetHeader) {}, false},
		{"Invalid Hash", func(psHeader *PartSetHeader) { psHeader.Hash = make([]byte, 1) }, true},
	}
	for _, tc := range testCases {
		tc := tc
		t.Run(tc.testName, func(t *testing.T) {
			data := cmtrand.Bytes(testPartSize * 100)
			ps := NewPartSetFromData(data, testPartSize)
			psHeader := ps.Header()
			tc.malleatePartSetHeader(&psHeader)
			assert.Equal(t, tc.expectErr, psHeader.ValidateBasic() != nil, "Validate Basic had an unexpected result")
		})
	}
}

func TestPartValidateBasic(t *testing.T) {
	testCases := []struct {
		testName     string
		malleatePart func(*Part)
		expectErr    bool
	}{
		{"Good Part", func(pt *Part) {}, false},
		{"Too big part", func(pt *Part) { pt.Bytes = make([]byte, BlockPartSizeBytes+1) }, true},
		{"Good small last part", func(pt *Part) {
			pt.Index = 1
			pt.Bytes = make([]byte, BlockPartSizeBytes-1)
			pt.Proof.Total = 2
		}, false},
		{"Too small inner part", func(pt *Part) {
			pt.Index = 0
			pt.Bytes = make([]byte, BlockPartSizeBytes-1)
			pt.Proof.Total = 2
		}, true},
		{"Too big proof", func(pt *Part) {
			pt.Proof = merkle.Proof{
				Total:    2,
				Index:    1,
				LeafHash: make([]byte, 1024*1024),
			}
		}, true},
	}

	for _, tc := range testCases {
		tc := tc
		t.Run(tc.testName, func(t *testing.T) {
			data := cmtrand.Bytes(testPartSize * 100)
			ps := NewPartSetFromData(data, testPartSize)
			part := ps.GetPart(0)
			tc.malleatePart(part)
			assert.Equal(t, tc.expectErr, part.ValidateBasic() != nil, "Validate Basic had an unexpected result")
		})
	}
}

func TestParSetHeaderProtoBuf(t *testing.T) {
	testCases := []struct {
		msg     string
		ps1     *PartSetHeader
		expPass bool
	}{
		{"success empty", &PartSetHeader{}, true},
		{
			"success",
			&PartSetHeader{Total: 1, Hash: []byte("hash")}, true,
		},
	}

	for _, tc := range testCases {
		protoBlockID := tc.ps1.ToProto()

		psh, err := PartSetHeaderFromProto(&protoBlockID)
		if tc.expPass {
			require.Equal(t, tc.ps1, psh, tc.msg)
		} else {
			require.Error(t, err, tc.msg)
		}
	}
}

func TestPartProtoBuf(t *testing.T) {
	proof := merkle.Proof{
		Total:    1,
		Index:    1,
		LeafHash: cmtrand.Bytes(32),
	}
	testCases := []struct {
		msg     string
		ps1     *Part
		expPass bool
	}{
		{"failure empty", &Part{}, false},
		{"failure nil", nil, false},
		{
			"success",
			&Part{Index: 1, Bytes: cmtrand.Bytes(32), Proof: proof}, true,
		},
	}

	for _, tc := range testCases {
		proto, err := tc.ps1.ToProto()
		if tc.expPass {
			require.NoError(t, err, tc.msg)
		}

		p, err := PartFromProto(proto)
		if tc.expPass {
			require.NoError(t, err)
			require.Equal(t, tc.ps1, p, tc.msg)
		}
	}
}

func TestPartSetEncodingDecoding(t *testing.T) {
	// Construct random data of size partSize * 100
	nParts := 500
	data := cmtrand.Bytes((int(BlockPartSizeBytes) * nParts) - 4)

	partSet := NewPartSetFromData(data, BlockPartSizeBytes)
	require.Equal(t, partSet.total, 2*uint32(nParts))

	ps2 := NewPartSetFromHeader(partSet.Header())
	require.Equal(t, partSet.Hash(), ps2.Hash())

	// only add half of the parts
	for i := 0; i < (nParts)*2; i++ {
		if i%2 != 0 {
			added, err := ps2.AddPart(partSet.parts[i])
			require.NoError(t, err)
			require.True(t, added)
		}
	}

	err := ps2.Decode()
	require.NoError(t, err)

	bz, err := io.ReadAll(ps2.GetReader())
	require.NoError(t, err)

	require.Equal(t, len(data), len(bz))
	require.Equal(t, data, bz)
}

// TestRoundTripVarInt tests the round-trip encoding and decoding of length-prefixed data.
func TestVarInt(t *testing.T) {
	t.Run("valid round-trip", func(t *testing.T) {
		originalData := []byte("This is a test slice of bytes")

		// Add length prefix
		prefixedData := AddLengthPrefix(originalData)
		require.NotNil(t, prefixedData)

		// Remove length prefix
		length, _, decodedData, err := RemoveLengthPrefix(prefixedData)
		require.NoError(t, err)
		require.Equal(t, len(originalData), length)
		require.Equal(t, originalData, decodedData)
	})

	t.Run("empty input", func(t *testing.T) {
		_, _, _, err := RemoveLengthPrefix([]byte{})
		require.Error(t, err)
	})

	t.Run("corrupted prefix", func(t *testing.T) {
		_, _, _, err := RemoveLengthPrefix([]byte{0xFF})
		require.Error(t, err)
	})
}

func TestProtoRoundTrip(t *testing.T) {
	b1 := MakeBlock(1, makeData([]Tx{Tx(cmtrand.Bytes(1000))}), &Commit{Signatures: []CommitSig{}}, []Evidence{})
	b1.ProposerAddress = cmtrand.Bytes(crypto.AddressSize)

	bp, err := b1.ToProto()
	require.NoError(t, err)

	bz, err := bp.Marshal()

	partSet := NewPartSetFromData(bz, BlockPartSizeBytes)

	partSet.parts[0] = nil

	err = partSet.Decode()
	require.NoError(t, err)

	bz2, err := io.ReadAll(partSet.GetReader())
	require.NoError(t, err)

	fmt.Println("bz2", len(bz2), bz2[:10])

	pbb := new(cmtproto.Block)
	err = proto.Unmarshal(bz2, pbb)
	require.NoError(t, err)

	b2, err := BlockFromProto(pbb)
	require.NoError(t, err)

	require.Equal(t, b1, b2)
}

func BenchmarkPartSetEncoding(b *testing.B) {
	nParts := 500
	data := make([]byte, int(BlockPartSizeBytes)*nParts-4)
	rand.Read(data) // Generate random data

	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		_ = NewPartSetFromData(data, BlockPartSizeBytes)
	}
}

// Runs the decoding benchmark for different part sizes
func BenchmarkPartSetDecoding(b *testing.B) {
	sizes := []int{500, 1000, 2000} // Different numbers of parts
	for _, nParts := range sizes {
		b.Run(fmt.Sprintf("%dParts", nParts), func(b *testing.B) {
			data := make([]byte, (int(BlockPartSizeBytes)*nParts)-100)
			rand.Read(data)

			partSet := NewPartSetFromData(data, BlockPartSizeBytes)

			b.ResetTimer()
			for i := 0; i < b.N; i++ {
				start := time.Now()

				ps := NewPartSetFromHeader(partSet.Header())

				// Add only half of the parts
				for j := 0; j < (nParts)*2; j++ {
					if j%2 != 0 {
						_, err := ps.AddPart(partSet.parts[j])
						require.NoError(b, err)
					}
				}

				err := ps.Decode()
				require.NoError(b, err)

				bz, err := io.ReadAll(ps.GetReader())
				require.NoError(b, err)
				require.Equal(b, len(data), len(bz))
				require.Equal(b, data, bz)

				duration := time.Since(start).Seconds()
				b.ReportMetric(duration, "s/op") // Report in seconds per operation
			}
		})
	}
}
